--- a/index.html
+++ b/index.html
@@ -32,7 +32,7 @@
       <h2>Web Developer!</h2>
   </div>
   <div>
-    <img src="../starter/images/nuket resim.jpeg" alt="">
+    <img src="../myportfolio/starter/images/nuket resim.jpeg" alt="">
   </div>
   </section>
 
